--- a/MCSR/plugin.yml
+++ b/MCSR/plugin.yml
@@ -6,6 +6,9 @@ api-version: '1.16'
 main: com.daytonjwatson.mcsr.MCSR
 commands:
   debug:
+  generatehub:
+    description: Generate the hub world
+    usage: /generatehub
   spawn:
     description: Teleport to spawn
     usage: /spawn
