--- a/MCSR/plugin.yml
+++ b/MCSR/plugin.yml
@@ -18,3 +18,6 @@ commands:
     permission: mcsr.setspawn
   startrun:
   stoprun:
+  playerdata:
+    description: View player run data
+    usage: /playerdata [player] [chat]
