Add run inventory restoration and leaderboard GUI

--- a/MCSR/plugin.yml
+++ b/MCSR/plugin.yml
@@ -22,3 +22,6 @@ commands:
   playerdata:
     description: View player run data
     usage: /playerdata [player] [chat]
+  leaderboard:
+    description: View the server leaderboard
+    usage: /leaderboard
